src/objects/Fund_Report__c.object
<CustomObject>
    <fields>
        <fullName>Annual_meeting__c</fullName>
        <label>Annual meeting</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cumulative_distributions__c</fullName>
        <description>cumulative distributions to the investor(s) and to the fund manager;
Formula. sum of all distributions</description>
        <label>Cumulative distributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_and_other_liabilities__c</fullName>
        <description>note of any leverage of the fund, including debt, guarantees, charges, warranties, indemnities or other
contingent liabilities.</description>
        <label>Debt and other liabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributions_to_paid_in_capital__c</fullName>
        <description>Formula</description>
        <label>Distributions to paid-in capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fair_value_of_portfolio__c</fullName>
        <description>Formula. of all fair value of portfolio companies</description>
        <label>Fair value of portfolio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipName>Fund_Quarterly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_update_and_overview__c</fullName>
        <label>Fund update and overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gross_IRR__c</fullName>
        <description>Formula</description>
        <label>Gross IRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_IRR_to_investors__c</fullName>
        <description>Formula</description>
        <label>Net IRR to investors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paid_in_capital_to_committed_capital__c</fullName>
        <description>Formula
paid-in capital to committed capital</description>
        <label>Paid-in capital to committed capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_drawdowns__c</fullName>
        <description>Formula
potential drawdowns for next reporting period.</description>
        <label>Potential drawdowns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recallable_distributions__c</fullName>
        <description>Formula. sum of all recallable distributions</description>
        <label>Recallable distributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_value_to_paid_in_capital__c</fullName>
        <description>Formula
- residual value (net of management fees and carried interest) to paid-in capital;</description>
        <label>Residual value to paid-in capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Significant_developments__c</fullName>
        <label>Significant developments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Commitment__c</fullName>
        <description>Calculated automatically. Sum of all commitments.</description>
        <label>Total commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_additional_committed__c</fullName>
        <description>total additional committed to portfolio companies and planned for follow-on investments;</description>
        <label>Total additional committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_drawdowns__c</fullName>
        <description>formula. sum of all drawdowns</description>
        <label>Total drawdowns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_invested_in_portfolio_companies__c</fullName>
        <description>Formula
total invested in portfolio companies</description>
        <label>Total invested in portfolio companies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_other_assets_and_liabilities__c</fullName>
        <label>Total other assets and liabilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_remaining_available_for_drowdown__c</fullName>
        <description>Formula. Difference between commitments and drowdawns</description>
        <label>Total remaining available for drowdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_value_to_paid_in_capital__c</fullName>
        <description>Formula
total value to paid-in capital</description>
        <label>Total value to paid-in capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fund Report</label>
    <nameField>
        <label>Fund Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>